# DeAIRequest

./: .gitignore  LICENSE  README.md  pyproject.toml
DeAIRequest_0011ai/: BacalhauProtocol.py  ErrorProtocol.py  README.md  test_DeAIRequest.py
DeAIRequest_0011ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DeAIRequest_0011ai/bacalhauconnector/: pyproject.toml
DeAIRequest_0011ai/bacalhauconnector/bacalhauconnector/: __init__.py
DeAIRequest_0011ai/bacalhauconnector/bacalhauconnector/cli/: init.py  run.py
DeAIRequest_0011ai/bacalhauconnector/bacalhauconnector/data/: config.py
DeAIRequest_0011ai/deairequest/: BacalhauProtocol.py  DeProtocol.py  README.md  __init__.py  jupyter-scipy-notebook:latest.req  pyproject.toml  pypy:latest.req  setup.cfg  test_DeAIRequest.py
DeAIRequest_0011ai/deairequest/deairequest/: BacalhauProtocol.py  DeProtocol.py  DeProtocolSelector.py  ErrorProtocol.py  amaksimov-python_data_science:latest.req  docker_images.pv  docker_images.pv.test  jupyter-scipy-notebook:latest.req  pypy:latest.req  pytorch-pytorch:2.0.1-cuda11.7-cudnn8-runtime.req  sdk_data.py  sdk_pandas.py  sdk_tf.py  sdk_torch.py  tensorflow-tensorflow:latest-gpu-jupyter.req  test.ipynb  test2.ipynb  test_DeAIRequest.py  ymoisan-scipy-geo:latest.req
DeAIRequest_0011ai/deairequest/deairequest/connectors/: pyproject.toml
DeAIRequest_0011ai/deairequest/deairequest/connectors/bacalhau/: backends.py  code.py  deploy.py  main.py  notebooks.py  querybhl.py  render.py
DeAIRequest_0011ai/deairequest/deairequest/connectors/bacalhauconnector/: main.py
DeAIRequest_0011ai/deairequest/deairequest/connectors/bacalhauconnector/cli/: run.py  verify.py  version.py
DeAIRequest_0011ai/deairequest/deairequest/connectors/bacalhauconnector/ops/: backends.py  code.py  execution.py  notebooks.py
DeAIRequest_0011ai/deairequest/deairequest/connectors/bacalhauconnector/ops/bacalhau/: Dockerfile  render copy.py
DeAIRequest_0011ai/deairequest/deairequest/connectors/bacalhauconnector/sdk/: conda_env.py  dataset.py  importer.py
DeAIRequest_0011ai/deairequest/temp2/QmVJBmhUxiTmsdKigbCCpZC6TYsrFqphpw7NsY2uXvY6Zh/outputs/inputs/: code.py
(+3 files in other folders)
