[project]
name = "DeAIRequest_0011ai"
version = "0.0.1"
authors = [
  { name="Maarten Ectors", email="maarten@0011.ai" }
]
description = "A Decentralised AI library which allows to run remote AI jobs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0011ai/deairequest"
"Bug Tracker" = "https://github.com/0011ai/deairequest/issues"
[build-system]
requires = [
    "setuptools>=61.0",
    "requests"
]
build-backend = "setuptools.build_meta"