[options]
zip_safe = True
include_package_data = True

[options.package_data]
deairequest = logo.svg, test.ipynb, test2.ipynb, test.txt, docker_images.pv, docker_images.pv.test, tensorflow-tensorflow:latest-gpu-jupyter.req, pytorch-pytorch:2.0.1-cuda11.7-cudnn8-runtime.req, amaksimov-python_data_science:latest.req, python:3.req 